--- a/src/server_manager/ui_components/outline-manual-server-entry.html
+++ b/src/server_manager/ui_components/outline-manual-server-entry.html
@@ -187,17 +187,17 @@
             <!-- TODO(alalama): localize numbers  -->
             <span class="stepcircle">1</span>
             <!-- TODOBEFOREMERGE i18n -->
-            <div class="instructions">Create your Google Cloud Project</div>
-            <div class="drop-down" on-tap="_toggleGcpCreateProjectDropDown">
+            <div class="instructions">Create your server</div>
+            <div class="drop-down" on-tap="_toggleGcpCreateServerDropDown">
               <img src="images/gcp-logo.svg" />
               <span>[[localize('manual-server-instructions')]]</span>
               <iron-icon
-                id="gcpCreateProjectDropDownIcon"
+                id="gcpCreateServerDropDownIcon"
                 icon="arrow-drop-down"
               ></iron-icon>
             </div>
           </div>
-          <iron-collapse id="gcpCreateProjectDropDown" class="instructions-collapse">
+          <iron-collapse id="gcpCreateServerDropDown" class="instructions-collapse">
             <div class="section-content-instructions">
               <!-- TODOBEFOREMERGE i18n -->
               <!-- TODOBEFOREMERGE images -->
@@ -216,25 +216,6 @@
                 </ol>
               </outline-cloud-instructions-view>
             </div>
-          </iron-collapse>
-        </div>
-        <div class="section" hidden$="[[!isCloudProviderGcp]]">
-          <div class="section-header">
-            <!-- TODO(alalama): localize numbers  -->
-            <span class="stepcircle">2</span>
-            <div class="instructions">
-              [[localize('manual-server-firewall')]]
-            </div>
-            <div class="drop-down" on-tap="_toggleGcpFirewallDropDown">
-              <img src="images/gcp-logo.svg" />
-              <span>[[localize('manual-server-instructions')]]</span>
-              <iron-icon
-                id="gcpFirewallDropDownIcon"
-                icon="arrow-drop-down"
-              ></iron-icon>
-            </div>
-          </div>
-          <iron-collapse id="gcpFirewallDropDown" class="instructions-collapse">
             <div class="section-content-instructions">
               <outline-cloud-instructions-view
                 title="[[localize('manual-server-create-firewall')]]"
@@ -254,24 +235,6 @@
                 </ol>
               </outline-cloud-instructions-view>
             </div>
-          </iron-collapse>
-        </div>
-        <div class="section" hidden$="[[!isCloudProviderGcp]]">
-          <div class="section-header">
-            <!-- TODO(alalama): localize numbers  -->
-            <span class="stepcircle">3</span>
-            <!-- TODOBEFOREMERGE i18n -->
-            <div class="instructions">Create your server</div>
-            <div class="drop-down" on-tap="_toggleGcpCreateServerDropDown">
-              <img src="images/gcp-logo.svg" />
-              <span>[[localize('manual-server-instructions')]]</span>
-              <iron-icon
-                id="gcpCreateServerDropDownIcon"
-                icon="arrow-drop-down"
-              ></iron-icon>
-            </div>
-          </div>
-          <iron-collapse id="gcpCreateServerDropDown" class="instructions-collapse">
             <div class="section-content-instructions">
               <!-- TODOBEFOREMERGE i18n -->
               <!-- TODOBEFOREMERGE images -->
@@ -493,13 +456,7 @@
         this.isGenericCloudProvider = this._computeIsGenericCloudProvider(
           newProvider
         );
-        if (this.isGenericCloudProvider) {
-          this.installScriptStepNumber = 1;
-        } else if (this.isCloudProviderGcp) {
-          this.installScriptStepNumber = 4;
-        } else {
-          this.installScriptStepNumber = 2;
-        }
+        this.installScriptStepNumber = this.isGenericCloudProvider ? 1 : 2;
         this.pasteJsonStepNumber = this.installScriptStepNumber + 1;
       },
       _computeCloudProviderName: function(cloudProvider) {
