--- a/src/server_manager/ui_components/outline-manual-server-entry.html
+++ b/src/server_manager/ui_components/outline-manual-server-entry.html
@@ -186,8 +186,7 @@
           <div class="section-header">
             <!-- TODO(alalama): localize numbers  -->
             <span class="stepcircle">1</span>
-            <!-- TODOBEFOREMERGE i18n -->
-            <div class="instructions">Create your server</div>
+            <div class="instructions">[[localize('gcp-create-server')]]</div>
             <div class="drop-down" on-tap="_toggleGcpCreateServerDropDown">
               <img src="images/gcp-logo.svg" />
               <span>[[localize('manual-server-instructions')]]</span>
@@ -199,19 +198,18 @@
           </div>
           <iron-collapse id="gcpCreateServerDropDown" class="instructions-collapse">
             <div class="section-content-instructions">
-              <!-- TODOBEFOREMERGE i18n -->
               <!-- TODOBEFOREMERGE images -->
               <outline-cloud-instructions-view
-                title="Create a Google Cloud project"
+                title="[[localize('gcp-create-project')]]"
                 thumbnail-path="images/fine.png"
                 image-path="images/greatwave.jpg"
                 localize="[[localize]]"
               >
                 <ol>
                   <li
-                    inner-h-t-m-l="[[localize('gcp-create-project', 'openLink', '<a href=https://console.cloud.google.com/projectcreate>', 'closeLink', '<iron-icon icon=open-in-new></iron-icon></a>')]]"
+                    inner-h-t-m-l="[[localize('gcp-create-new-project', 'openLink', '<a href=https://console.cloud.google.com/projectcreate>', 'closeLink', '<iron-icon icon=open-in-new></iron-icon></a>')]]"
                   ></li>
-                  <li>Name your project in the "Project name" field.</li>
+                  <li>[[localize('gcp-name-your-project')]]</li>
                   <li>[[localize('gcp-click-create')]]</li>
                 </ol>
               </outline-cloud-instructions-view>
@@ -236,29 +234,22 @@
               </outline-cloud-instructions-view>
             </div>
             <div class="section-content-instructions">
-              <!-- TODOBEFOREMERGE i18n -->
               <!-- TODOBEFOREMERGE images -->
               <outline-cloud-instructions-view
-                title="Create a VM Instance"
+                title="[[localize('gcp-create-vm')]]"
                 thumbnail-path="images/fine.png"
                 image-path="images/greatwave.jpg"
                 localize="[[localize]]"
               >
                 <ol>
                   <li
-                    inner-h-t-m-l="[[localize('gcp-create-vm', 'openLink', '<a href=https://console.cloud.google.com/compute/instancesAdd>', 'closeLink', '<iron-icon icon=open-in-new></iron-icon></a>')]]"
+                    inner-h-t-m-l="[[localize('gcp-create-new-vm', 'openLink', '<a href=https://console.cloud.google.com/compute/instancesAdd>', 'closeLink', '<iron-icon icon=open-in-new></iron-icon></a>')]]"
                   ></li>
-                  <li>Type "outline-server" in the "Name" field</li>
-                  <li>
-                    Select a region close to where the server's users will be
-                    under "Region"
-                  </li>
-                  <li>Select "f1-micro" under "Machine type"</li>
-                  <li>
-                    Click "Management, security, disks, networking, sole
-                    tenancy", then "Networking"
-                  </li>
-                  <li>Type "outline" in the "Network tags" field</li>
+                  <li>[[localize('gcp-type-outline-server')]]</li>
+                  <li>[[localize('gcp-select-region')]]</li>
+                  <li>[[localize('gcp-select-machine-type')]]</li>
+                  <li>[[localize('gcp-select-networking')]]</li>
+                  <li>[[localize('gcp-type-network-tag')]]</li>
                   <li>[[localize('gcp-click-create')]]</li>
                 </ol>
               </outline-cloud-instructions-view>
@@ -443,7 +434,6 @@
       clear: function() {
         this.$.serverConfig.value = "";
         this.showConnection = false;
-        // TODOBEFOREPUSH use $$ to select all drop-downs
         for (const dropdown of Polymer.dom(this.root).querySelectorAll(".instructions-collapse")) {
           dropdown.hide();
         }
