--- a/src/server_manager/ui_components/outline-server-view.html
+++ b/src/server_manager/ui_components/outline-server-view.html
@@ -628,7 +628,13 @@
     Polymer({
       is: "outline-server-view",
       created: function() {
-        this.bytes = require("bytes");
+        this.byteSize = require("byte-size");
+        this.byteSize.defaultOptions({
+          units: "metric",
+          toStringFn: function() {
+            return `${this.value} ${this.unit}`;
+          },
+        });
       },
       properties: {
         serverId: String,
@@ -800,13 +806,13 @@
 
         // Show 0 decimals for < 1MB, 1 decimal for >= 1MB, 2 decimals for >= 1GB.
         let numDecimals = 0;
-        if (numBytes >= 2 ** 30) {
+        if (numBytes >= 10 ** 9) {
           numDecimals = 2;
-        } else if (numBytes >= 2 ** 20) {
+        } else if (numBytes >= 10 ** 6) {
           numDecimals = 1;
         }
 
-        return this.bytes(numBytes, {unitSeparator: " ", decimalPlaces: numDecimals});
+        return this.byteSize(numBytes, {precision: numDecimals}).toString();
       },
       _getFormattedTransferredUnit: function(numBytes, emptyValue = "") {
         const formattedTransfer = this._formatBytesTransferred(numBytes);
