Moves connect flow inside share dialog

--- a/src/server_manager/ui_components/outline-share-dialog.html
+++ b/src/server_manager/ui_components/outline-share-dialog.html
@@ -82,15 +82,25 @@
         margin: 24px 0;
         padding: 0;
         letter-spacing: 0.62px;
+        display: flex;
+        justify-content: space-between;
       }
       #copyButton {
         color: #f1f2f3;
         background-color: #263238;
+        width: 40%;
+      }
+      #connectButton {
+        color: #f1f2f3;
+        background-color: #263238;
+        width: 40%;
       }
       #doneButton {
         color: #009485;
-        right: 0;
-        position: absolute;
+        width: 20%;
+      }
+      paper-button {
+        padding: 1em 2em 1em 2em;
       }
     </style>
     <paper-dialog id="dialog" modal>
@@ -121,6 +131,7 @@
       </div>
       <div id="button-row">
         <paper-button id="copyButton" on-tap="copyClicked">[[localize('share-invite-copy')]]</paper-button>
+        <paper-button id="connectButton" on-tap="connectClicked">[[localize('server-connect-devices')]]</paper-button>
         <paper-button id="doneButton" dialog-confirm>[[localize('done')]]</paper-button>
       </div>
       <div id="copyText" hidden>[[localize('share-invite-copied')]]</div>
@@ -149,6 +160,10 @@
         dt.setData("text/html", this.$.selectableText.innerHTML);
         this.clipboard.write(dt);
         this.$.copyText.removeAttribute("hidden");
+      },
+      connectClicked: function() {
+        this.fire("OpenGetConnectedDialogRequested", {accessKey: this.acessKey});
+        this.$.dialog.close();
       },
     });
   </script>
