--- a/src/server_manager/ui_components/outline-manual-server-entry.html
+++ b/src/server_manager/ui_components/outline-manual-server-entry.html
@@ -299,7 +299,7 @@
         <!-- Install command -->
         <div class="section">
           <div class="section-header">
-            <span class="stepcircle">{{installScriptStepNumber}}</span>
+            <span class="stepcircle">[[installScriptStepNumber]]</span>
             <div class="instructions">
               [[localize('manual-server-install-run')]]
             </div>
@@ -314,7 +314,7 @@
         <!-- Paste input -->
         <div class="section">
           <div class="section-header">
-            <span class="stepcircle">{{pasteJsonStepNumber}}</span>
+            <span class="stepcircle">[[pasteJsonStepNumber]]</span>
             <div class="instructions">
               [[localize('manual-server-install-paste')]]
             </div>
@@ -346,14 +346,6 @@
     Polymer({
       is: "outline-manual-server-entry",
       properties: {
-        installScriptStepNumber: {
-          type: Number,
-          value: 2,
-        },
-        pasteJsonStepNumber: {
-          type: Number,
-          value: 3,
-        },
         placeholderText: {
           type: String,
           value:
@@ -363,7 +355,6 @@
         cloudProvider: {
           type: String,
           value: "generic",
-          observer: "_cloudProviderChanged",
         },
         cloudProviderName: {
           type: String,
@@ -380,6 +371,14 @@
         isGenericCloudProvider: {
           type: Boolean,
           computed: "_computeIsGenericCloudProvider(cloudProvider)",
+        },
+        installScriptStepNumber: {
+          type: Number,
+          computed: "_computeInstallScriptStepNumber(isGenericCloudProvider)",
+        },
+        pasteJsonStepNumber: {
+          type: Number,
+          computed: "_computePasteJsonStepNumber(installScriptStepNumber)",
         },
         enableDoneButton: {
           type: Boolean,
@@ -410,15 +409,6 @@
           dropdown.hide();
         }
       },
-      // TODO(cohenjon) Provide encapsulation for cloud-specific details once we overhaul the AWS directions
-      _cloudProviderChanged: function(newProvider) {
-        this.cloudProviderName = this._computeCloudProviderName(newProvider);
-        this.isCloudProviderAws = this._computeIsCloudProviderAws(newProvider);
-        this.isCloudProviderGcp = this._computeIsCloudProviderGcp(newProvider);
-        this.isGenericCloudProvider = this._computeIsGenericCloudProvider(newProvider);
-        this.installScriptStepNumber = this.isGenericCloudProvider ? 1 : 2;
-        this.pasteJsonStepNumber = this.installScriptStepNumber + 1;
-      },
       _computeCloudProviderName: function(cloudProvider) {
         switch (cloudProvider) {
           case "aws":
@@ -437,6 +427,12 @@
       },
       _computeIsGenericCloudProvider: function(cloudProvider) {
         return cloudProvider === "generic";
+      },
+      _computeInstallScriptStepNumber: function(isGenericCloudProvider) {
+        return isGenericCloudProvider ? 1 : 2;
+      },
+      _computePasteJsonStepNumber: function(installScriptStepNumber) {
+        return installScriptStepNumber + 1;
       },
       _toggleAwsDropDown: function() {
         this._toggleDropDown(this.$.awsDropDown, this.$.awsDropDownIcon);
