Replaces the EC2 instructions with Lightsail

--- a/src/server_manager/ui_components/outline-intro-step.html
+++ b/src/server_manager/ui_components/outline-intro-step.html
@@ -231,7 +231,7 @@
             <div class="tag">[[localize('setup-advanced')]]</div>
             <img src="images/aws-logo.svg" />
           </div>
-          <div class="card-title">Amazon Web Services</div>
+          <div class="card-title">Amazon Lightsail</div>
           <div class="card-body">
             <div class="description">
               <ul>
