--- a/src/server_manager/ui_components/outline-manual-server-entry.html
+++ b/src/server_manager/ui_components/outline-manual-server-entry.html
@@ -245,30 +245,13 @@
               >
                 <ol>
                   <li
-                    inner-h-t-m-l="[[localize('aws-group-create-0', 'openLink', '<a href=https://console.aws.amazon.com/ec2/v2/home>', 'closeLink', '<iron-icon icon=open-in-new></iron-icon></a>')]]"
+                    inner-h-t-m-l="[[localize('aws-lightsail-firewall-0', 'openLink', '<a href=https://lightsail.aws.amazon.com>', 'closeLink', '<iron-icon icon=open-in-new></iron-icon></a>')]]"
                   ></li>
-                  <li>[[localize('aws-group-create-1')]]</li>
-                  <li>[[localize('aws-group-create-2')]]</li>
-                  <li>[[localize('aws-group-create-3')]]</li>
-                  <li>[[localize('aws-group-create-4')]]</li>
-                  <li>[[localize('aws-group-create-5')]]</li>
-                </ol>
-              </outline-cloud-instructions-view>
-            </div>
-            <div class="section-content-instructions">
-              <outline-cloud-instructions-view
-                title="[[localize('manual-server-assign-group')]]"
-                thumbnail-path="images/aws-thumbnail-2.png"
-                image-path="images/aws-screenshot-2.png"
-                localize="[[localize]]"
-              >
-                <ol>
-                  <li
-                    inner-h-t-m-l="[[localize('aws-group-assign-0', 'openLink', '<a href=https://console.aws.amazon.com/ec2/v2/home#Instances:sort=instanceId>', 'closeLink', '<iron-icon icon=open-in-new></iron-icon></a>')]]"
-                  ></li>
-                  <li>[[localize('aws-group-assign-1')]]</li>
-                  <li>[[localize('aws-group-assign-2')]]</li>
-                  <li>[[localize('aws-group-assign-3')]]</li>
+                  <li>[[localize('aws-lightsail-firewall-1')]]</li>
+                  <li>[[localize('aws-lightsail-firewall-2')]]</li>
+                  <li>[[localize('aws-lightsail-firewall-3')]]</li>
+                  <li>[[localize('aws-lightsail-firewall-4')]]</li>
+                  <li>[[localize('aws-lightsail-firewall-5')]]</li>
                 </ol>
               </outline-cloud-instructions-view>
             </div>
