Fixes data transfer UI to always display in base 10 (GB vs GiB) (#605)
* Fixes data transfer limit calculation

* Replaces bytes library with byte-size

* Addresses review comments

* Update licenses.txt

* Fix typo

--- a/src/server_manager/ui_components/outline-server-view.html
+++ b/src/server_manager/ui_components/outline-server-view.html
@@ -628,7 +628,13 @@
     Polymer({
       is: "outline-server-view",
       created: function() {
-        this.bytes = require("bytes");
+        this.byteSize = require("byte-size");
+        this.byteSize.defaultOptions({
+          units: "metric",
+          toStringFn: function() {
+            return `${this.value} ${this.unit}`;
+          },
+        });
       },
       properties: {
         serverId: String,
@@ -806,7 +812,7 @@
           numDecimals = 1;
         }
 
-        return this.bytes(numBytes, {unitSeparator: " ", decimalPlaces: numDecimals});
+        return this.byteSize(numBytes, {precision: numDecimals}).toString();
       },
       _getFormattedTransferredUnit: function(numBytes, emptyValue = "") {
         const formattedTransfer = this._formatBytesTransferred(numBytes);
