--- a/src/server_manager/ui_components/outline-server-view.html
+++ b/src/server_manager/ui_components/outline-server-view.html
@@ -584,6 +584,7 @@
             server-id="[[serverId]]"
             server-hostname="[[serverHostname]]"
             server-name="[[serverName]]"
+            server-version="[[serverVersion]]"
             is-hostname-editable="[[isHostnameEditable]]"
             server-management-api-url="[[serverManagementApiUrl]]"
             server-port-for-new-access-keys="[[serverPortForNewAccessKeys]]"
@@ -640,6 +641,7 @@
         serverId: String,
         serverName: String,
         serverHostname: String,
+        serverVersion: String,
         isHostnameEditable: {type: Boolean, value: false},
         serverManagementApiUrl: String,
         serverPortForNewAccessKeys: Number,
