Use dialog confirm

--- a/src/server_manager/ui_components/outline-hats-dialog.html
+++ b/src/server_manager/ui_components/outline-hats-dialog.html
@@ -85,7 +85,7 @@
             <paper-button dialog-dismiss noink>
               [[localize('hats-no-thanks')]]
             </paper-button>
-            <paper-button dialog-dismiss noink>
+            <paper-button dialog-confirm autofocus noink>
               <a href="[[surveyLink]]">[[localize('hats-go-to-survey')]]</a>
             </paper-button>
           </div>
