--- a/src/server_manager/ui_components/app-root.html
+++ b/src/server_manager/ui_components/app-root.html
@@ -31,7 +31,7 @@
 <link rel="import" href="./outline-about-dialog.html" />
 <link rel="import" href="./outline-do-oauth-step.html" />
 <link rel="import" href="./outline-feedback-dialog.html" />
-<link rel="import" href="./outline-hats-dialog.html" />
+<link rel="import" href="./outline-survey-dialog.html" />
 <link rel="import" href="./outline-intro-step.html" />
 <link rel="import" href="./outline-manual-server-entry.html" />
 <link rel="import" href="./outline-modal-dialog.html" />
@@ -499,7 +499,7 @@
       ></paper-toast>
 
       <!-- Modal dialogs must be outside the app container; otherwise the backdrop covers them.  -->
-      <outline-hats-dialog id="hatsDialog" localize="[[localize]]"></outline-hats-dialog>
+      <outline-survey-dialog id="surveyDialog" localize="[[localize]]"></outline-survey-dialog>
       <outline-feedback-dialog id="feedbackDialog" localize="[[localize]]"></outline-feedback-dialog>
       <outline-about-dialog
         id="aboutDialog"
