Updates Amazon Lightsail assets

--- a/src/server_manager/ui_components/outline-manual-server-entry.html
+++ b/src/server_manager/ui_components/outline-manual-server-entry.html
@@ -239,8 +239,8 @@
             <div class="section-content-instructions">
               <outline-cloud-instructions-view
                 title="[[localize('manual-server-create-group')]]"
-                thumbnail-path="images/aws-thumbnail-1.png"
-                image-path="images/aws-screenshot-1.png"
+                thumbnail-path="images/aws-lightsail-thumbnail-1.png"
+                image-path="images/aws-lightsail-screenshot-1.png"
                 localize="[[localize]]"
               >
                 <ol>
