Update survey decline message

--- a/src/server_manager/ui_components/outline-survey-dialog.html
+++ b/src/server_manager/ui_components/outline-survey-dialog.html
@@ -85,7 +85,7 @@
           <h3>[[title]]</h3>
           <div id="button-container">
             <paper-button dialog-dismiss noink>
-              [[localize('survey-no-thanks')]]
+              [[localize('survey-decline')]]
             </paper-button>
             <paper-button dialog-confirm autofocus noink>
               <a href="[[surveyLink]]">[[localize('survey-go-to-survey')]]</a>
