Replace placeholder assets

--- a/src/server_manager/ui_components/outline-manual-server-entry.html
+++ b/src/server_manager/ui_components/outline-manual-server-entry.html
@@ -186,11 +186,10 @@
           </div>
           <iron-collapse id="gcpCreateServerDropDown" class="instructions-collapse">
             <div class="section-content-instructions">
-              <!-- TODOBEFOREMERGE images -->
               <outline-cloud-instructions-view
                 title="[[localize('gcp-create-project')]]"
-                thumbnail-path="images/fine.png"
-                image-path="images/greatwave.jpg"
+                thumbnail-path="images/gcp-create-project-thumbnail.png"
+                image-path="images/gcp-create-project-screenshot.png"
                 localize="[[localize]]"
               >
                 <ol>
@@ -225,8 +224,8 @@
               <!-- TODOBEFOREMERGE images -->
               <outline-cloud-instructions-view
                 title="[[localize('gcp-create-vm')]]"
-                thumbnail-path="images/fine.png"
-                image-path="images/greatwave.jpg"
+                thumbnail-path="images/gcp-create-instance-thumbnail.png"
+                image-path="images/gcp-create-instance-screenshot.png"
                 localize="[[localize]]"
               >
                 <ol>
