--- a/src/server_manager/ui_components/outline-share-dialog.html
+++ b/src/server_manager/ui_components/outline-share-dialog.html
@@ -114,7 +114,7 @@
         <ol>
           <li>
             [[localize('share-invite-copy-access-key')]]
-            <a href="{{accessKey}}">{{accessKey}}</a>
+            <a href="[[accessKey]]">[[accessKey]]</a>
           </li>
           <li>
             [[localize('share-invite-instructions')]]
