Simplify index.html

--- a/src/server_manager/ui_components/app-root.html
+++ b/src/server_manager/ui_components/app-root.html
@@ -16,6 +16,7 @@
 <link rel="import" href="../bower_components/polymer/polymer.html" />
 <link rel="import" href="../bower_components/app-layout/app-drawer/app-drawer.html" />
 <link rel="import" href="../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html" />
+<link rel="import" href="../bower_components/app-layout/app-toolbar/app-toolbar.html" />
 <link rel="import" href="../bower_components/app-localize-behavior/app-localize-behavior.html" />
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html" />
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html" />
