Move <app-root> back to index.html

--- a/src/server_manager/index.html
+++ b/src/server_manager/index.html
@@ -36,5 +36,7 @@
 
     <title>Outline Manager</title>
   </head>
-  <body></body>
+  <body>
+    <app-root id="appRoot"></app-root>
+  </body>
 </html>
