Stop depending on Node code in the browser code

--- a/src/server_manager/ui_components/outline-server-view.html
+++ b/src/server_manager/ui_components/outline-server-view.html
@@ -787,6 +787,7 @@
         this.totalInboundBytes = totalBytes;
       },
       updateAccessKeyRow(accessKeyId, fields) {
+        let newAccessKeyRow;
         if (accessKeyId === MY_CONNECTION_USER_ID) {
           newAccessKeyRow = Object.assign({}, this.get("myConnection"), fields);
           this.set("myConnection", newAccessKeyRow);
