--- a/src/server_manager/index.html
+++ b/src/server_manager/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="/ui_components/style.css" />
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="import" href="/ui_components/app-root.html" />
-    <script src="server_manager/web_app/main.js"></script>
+    <script src="main.js"></script>
 
     <!-- TODO: Add Outline servers to connect-src on-demand (in addition to the DigitalOcean API). -->
     <meta
