--- a/src/server_manager/ui_components/outline-server-view.html
+++ b/src/server_manager/ui_components/outline-server-view.html
@@ -598,6 +598,7 @@
             server-monthly-transfer-limit="[[_formatBytesTransferred(monthlyOutboundTransferBytes)]]"
             is-server-managed="[[isServerManaged]]"
             server-location="[[serverLocation]]"
+            metrics-enabled="[[metricsEnabled]]"
             localize="[[localize]]"
           >
           </outline-server-settings>
